fix button - text alignment

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -50,7 +50,6 @@
   }
 
   &__button {
-    display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: 16px;
